# tango-test

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CMakeLists.txt  CODEOWNERS  ClassFactory.cpp  CmakeTangoWin.cmake  Dockerfile  Logging.h  README.md  TangoTest.cpp  TangoTest.h  TangoTest.xmi  TangoTestClass.cpp  TangoTestClass.h  TangoTestStateMachine.cpp  main.cpp
classes/TangoTest/: CMakeLists.txt  TangoTest.xmi
classes/TangoTest/include/: TangoTest.h
classes/TangoTest/src/: TangoTest.cpp  TangoTestClass.cpp  TangoTestStateMachine.cpp
cmake/: FindTango.cmake  FindZeroMQ.cmake  Findcppzmq.cmake  FindomniORB4.cmake  find-lib.cmake
cmake/config/: default-config.cmake  user-config.cmake
cmake/debug/: env.cmake
cmake/macro/: default-macro.cmake  user-macro.cmake
cmake/template/: Config.cmake.in
servers/TangoTest/: CMakeLists.txt
servers/TangoTest/src/: ClassFactory.cpp  main.cpp
win32/win32_vc7/: tangotest.sln  tangotest_shared.vcproj  tangotest_static.vcproj
win32/win32_vc8/: tangotest.sln  tangotest_shared.vcproj  tangotest_static.vcproj
win32/win32_vc9/: tangotest.sln  tangotest_shared.vcproj  tangotest_static.vcproj
win64/win64_vc10/: TangoTest.vcxproj
win64/win64_vc12/: TangoTest.sln  TangoTest.vcxproj
